<resources>
    <string name="app_name">KPKAudioLibrary</string>
    <string name="book_name" translatable="false">Krok po kroku %1$s</string>
    <string name="book_description" translatable="false">Book description</string>
    <string name="book_type">Book</string>"
    <string name="workbook_type">Workbook</string>"
    <string name="lesson_number_placeholder" translatable="false">99</string>
    <string name="lesson_name">Lesson </string>
    <string name="lesson_description_placeholder" translatable="false">Lesson description</string>
    <string name="company_name" translatable="false">E-Polish</string>
    <string name="search_book">Search book</string>
    <string name="exercise_number_placeholder" translatable="false">99</string>
    <string name="exercise_part_index_placeholder" translatable="false">B</string>
    <string name="start_button">Start</string>
    <string name="play_button">Play</string>
    <string name="replay_button" translatable="false">Replay 5 sec</string>
    <string name="forward_button" translatable="false">Forward 5 sec</string>
    <string name="exercise_name" translatable="false">Exercise</string>
    <string name="download_button">Download</string>
    <string name="downloading_book">Downloading book...</string>
</resources>