<!-- res/layout/exercise_item.xml -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_superellipse_background">

        <View
            android:id="@+id/view_end_background"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:background="@drawable/end_vie_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/exercise_number"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/icon_background_square"
            android:contentDescription="@string/app_name"
            android:text="@string/exercise_number_placeholder"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            android:text="@string/exercise_name"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/exercise_number"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/exercise_start_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/primary_pressable_superellipse_background"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_button"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorIconTint"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/exercise_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_end_background"
            app:layout_constraintStart_toEndOf="@id/exercise_number"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>